--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -112,8 +112,8 @@ a:hover {
 }
 
 .btn:hover {
-  -webkit-box-shadow: 0 5px 20px -7px rgba(0, 0, 0, 0.9) !important;
-  box-shadow: 0 5px 20px -7px rgba(0, 0, 0, 0.9) !important;
+  /*-webkit-box-shadow: 0 5px 20px -7px rgba(0, 0, 0, 0.9) !important;*/
+  /*box-shadow: 0 5px 20px -7px rgba(0, 0, 0, 0.9) !important;*/
 }
 
 .btn.pill {
@@ -1489,7 +1489,7 @@ a:hover {
 }
 
 .box-step .step.active .circle {
-  background: #c4592b;
+  background: #28A745;
   color: #fff;
 }
 
@@ -1707,14 +1707,18 @@ a:hover {
 }
 
 .option-date button.active{
-  border: 1px solid #438e29;
-  background-color: #438e29;
-  color: #fff;
+  border: 1px solid #48a32e;
+  background-color: #48a32e;
+  color: #fff !important;
+}
+
+.btn-primary{
+  color: #fff !important;
 }
 
 .option-date button.active:hover{
-  border: 1px solid #49a82f;
-  background-color: #49a82f;
+  border: 1px solid #438E29;
+  background-color: #438E29;
 }
 
 .box-option{
@@ -1753,6 +1757,360 @@ a:hover {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.recommendations__result{
+  padding: 2rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center;
+}
+
+.recommendations__result-figure{
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.recommendations__result-content{
+  -webkit-box-flex: 5;
+  -webkit-flex: 5;
+  -ms-flex: 5;
+  flex: 5;
+  position: relative;
+}
+
+@media all and (min-width: 601px) {
+  .recommendations__result-content {
+    margin-left: 2rem
+  }
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__result-content {
+    text-align: center
+  }
+
+  .recommendations__result {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    max-width: 350px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 1rem
+  }
+}
+
+.recommendations__review-link{
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+.recommendations__hire-btn{
+  margin: 1rem 0;
+  font-size: 1.125rem;
+  display: block;
+}
+
+@media all and (min-width: 501px) {
+  .recommendations__result {
+    text-align: left
+  }
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__result--tasker .recommendations__result-figure .recommendations__hire-btn,
+  .recommendations__result--tasker .recommendations__result-figure .recommendations__review-link {
+    display: none
+  }
+  .recommendations__result--tasker .recommendations__result-content .recommendations__result-actions {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column
+  }
+  .recommendations__result--tasker .recommendations__result-content .recommendations__hire-btn {
+    margin-left: auto;
+    margin-right: auto
+  }
+}
+
+@media all and (min-width: 601px) {
+  .recommendations__result--tasker .recommendations__result-content .recommendations__result-actions {
+    display: none
+  }
+  .recommendations__result--tasker .recommendations__result-content .recommendations__review-link {
+    display: none
+  }
+}
+
+.recommendations__result-info {
+  margin-bottom: 0.8rem
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__result-info {
+    text-align: left;
+    margin-top: 0
+  }
+}
+
+.recommendations__result-info li {
+  padding-top: 0.3rem
+}
+
+.recommendations__badge-list {
+  text-align: left
+}
+
+.recommendations__badge-list li {
+  display: inline;
+  position: relative
+}
+
+.recommendations__badge-list li:not(:first-child) {
+  padding-top: 0px
+}
+
+@media all and (min-width: 601px) {
+  .recommendations__result-info .recommendations__pill {
+    margin-left: -1.25rem
+  }
+}
+
+.recommendations__result-info i {
+  margin-right: 0.25rem;
+  padding-right: 12px
+}
+
+.recommendations__review {
+  margin-top: 18px
+}
+
+.recommendations__avatar__circular {
+  width: 100%;
+  border-radius: 50%
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__avatar__circular {
+    margin-bottom: 1rem
+  }
+}
+
+.recommendations__result-actions-tasker-details {
+  margin-top: 1em
+}
+
+@media all and (max-width: 500px) {
+  .recommendations__tasker-detail .recommendations__result-actions {
+    padding: 1rem;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    z-index: 100;
+    background: white;
+    box-shadow: -3px 0 7px rgba(0, 0, 0, 0.25)
+  }
+}
+
+.whisper{
+  font-weight: 200;
+  font-size: 14px;
+}
+.recommendations__result-name {
+  font-size: 2em;
+  font-weight: bold
+}
+
+.recommendations__result-price-container {
+  margin-bottom: 0.8rem
+}
+
+@media all and (min-width: 601px) {
+  .recommendations__result-price-container {
+    position: absolute;
+    right: 0;
+    top: 0
+  }
+}
+
+.recommendations__result-price-container.priceChange-appear,
+.recommendations__result-price-container.priceChange-enter {
+  opacity: 0.01
+}
+
+.recommendations__result-price-container.priceChange-appear-active,
+.recommendations__result-price-container.priceChange-enter-active {
+  opacity: 1;
+  -webkit-transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in
+}
+
+.recommendations__result-price-container.priceChange-leave {
+  opacity: 1
+}
+
+.recommendations__result-price-container.priceChange-leave-active {
+  opacity: 0.01;
+  -webkit-transition: opacity 0.25s ease-out;
+  transition: opacity 0.25s ease-out
+}
+.recommendations__result-price {
+  font-size: 1.5em;
+  text-align: center
+}
+
+.recommendations__result-price strong {
+  font-weight: 600
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__result-price {
+    font-size: 1.25em;
+    margin-top: 1rem
+  }
+}
+
+.recommendations__result-info {
+  margin-bottom: 0.8rem
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__result-info {
+    text-align: left;
+    margin-top: 0
+  }
+}
+
+.recommendations__result-info li {
+  padding-top: 0.3rem
+}
+
+@media all and (min-width: 601px) {
+  .recommendations__result-info .recommendations__pill {
+    margin-left: -1.25rem
+  }
+}
+
+.recommendations__result-info i {
+  margin-right: 0.25rem;
+  padding-right: 12px;
+  background: #fff;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+@media all and (max-width: 600px) {
+  .recommendations__no-category-review,
+  .recommendations__blurb-title,
+  .recommendations__blurb {
+    text-align: left
+  }
+}
+
+.recommendations__blurb-title {
+  font-size: 1rem;
+  font-weight: bold
+}
+.recommendations__result--tasker .recommendations__blurb-title {
+  padding-top: 1rem;
+  border-top: 1px solid #dce0e6
+}
+
+.recommendations__blurb{
+  font-weight: 300;
+}
+
+.media--figure {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex
+}
+
+.media--object {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.media--object .media--figure, .media--object .media--content {
+  position: relative;
+}
+
+.media--object .media--figure {
+  margin-right: 1.5em;
+}
+
+i.recommendations__badge-info {
+  color: #b1b9c3;
+  margin-left: 0.25rem;
+  padding: 0 !important
+}
+
+.recommendations__review-content {
+  font-style: italic
+}
+
+.avatar-new-72 {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+}
+
+.recommendations__review {
+  margin-top: 18px
+}
+
+@media all and (max-width: 500px) {
+  .recommendations__review,
+  .recommendations__no-category-review {
+    display: none
+  }
 }
 
 /*RESET CSS Bootstrap*/
