--- a/src/main/resources/templates/create-task-step-1.html
+++ b/src/main/resources/templates/create-task-step-1.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Create Task</title>
-    <th:block th:include="fragment/layout :: head"></th:block>
+    <th:block th:include="fragment/layout :: head"> </th:block>
 </head>
 <body>
 
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row border-bottom pb-3">
                 <div class="col-md-1 box-logo-step">
-                    <img alt="TaskUnite" class="logo-step" th:src="@{/images/logo1.png}">
+                    <img alt="TaskUnite" class="logo-step" th:src="@{/images/favicon.png}">
                 </div>
                 <div class="col-md-9 offset-md-2">
                     <div class="box-step">
@@ -281,105 +281,9 @@
             </div>
         </div>
     </div>
-
-    <div class="site-section">
-        <div class="container">
-            <div class="row justify-content-center text-center mb-5">
-                <div class="col-md-6" data-aos="fade">
-                    <h2>Frequently Ask Questions</h2>
-                </div>
-            </div>
-
-
-            <div class="row justify-content-center" data-aos="fade" data-aos-delay="100">
-                <div class="col-md-8">
-                    <div class="accordion unit-8" id="accordion">
-                        <div class="accordion-item">
-                            <h3 class="mb-0 heading">
-                                <a aria-controls="collapseOne" aria-expanded="true" class="btn-block"
-                                   data-toggle="collapse"
-                                   href="#collapseOne" role="button">What is the name of your
-                                    company<span class="icon"></span></a>
-                            </h3>
-                            <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
-                                 id="collapseOne">
-                                <div class="body-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur quae cumque
-                                        perspiciatis aperiam accusantium facilis provident aspernatur nisi optio debitis
-                                        dolorum, est eum eligendi vero aut ad necessitatibus nulla sit labore doloremque
-                                        magnam! Ex molestiae, dolor tempora, ad fuga minima enim mollitia consequuntur,
-                                        necessitatibus praesentium eligendi officia recusandae culpa tempore eaque quasi
-                                        ullam magnam modi quidem in amet. Quod debitis error placeat, tempore quasi
-                                        aliquid eaque vel facilis culpa voluptate.</p>
-                                </div>
-                            </div>
-                        </div> <!-- .accordion-item -->
-
-                        <div class="accordion-item">
-                            <h3 class="mb-0 heading">
-                                <a aria-controls="collapseTwo" aria-expanded="false" class="btn-block"
-                                   data-toggle="collapse"
-                                   href="#collapseTwo" role="button">How much pay for 3 months?<span
-                                    class="icon"></span></a>
-                            </h3>
-                            <div aria-labelledby="headingOne" class="collapse" data-parent="#accordion"
-                                 id="collapseTwo">
-                                <div class="body-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad laborum
-                                        expedita. Nostrum iure atque enim quisquam minima distinctio omnis, consequatur
-                                        aliquam suscipit, quidem, esse aspernatur! Libero, excepturi animi repellendus
-                                        porro impedit nihil in doloremque a quaerat enim voluptatum, perspiciatis, quas
-                                        dignissimos maxime ut cum reiciendis eius dolorum voluptatem aliquam!</p>
-                                </div>
-                            </div>
-                        </div> <!-- .accordion-item -->
-
-                        <div class="accordion-item">
-                            <h3 class="mb-0 heading">
-                                <a aria-controls="collapseThree" aria-expanded="false" class="btn-block"
-                                   data-toggle="collapse"
-                                   href="#collapseThree" role="button">Do I need to register? <span
-                                    class="icon"></span></a>
-                            </h3>
-                            <div aria-labelledby="headingOne" class="collapse" data-parent="#accordion"
-                                 id="collapseThree">
-                                <div class="body-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad laborum
-                                        expedita. Nostrum iure atque enim quisquam minima distinctio omnis, consequatur
-                                        aliquam suscipit, quidem, esse aspernatur! Libero, excepturi animi repellendus
-                                        porro impedit nihil in doloremque a quaerat enim voluptatum, perspiciatis, quas
-                                        dignissimos maxime ut cum reiciendis eius dolorum voluptatem aliquam!</p>
-                                </div>
-                            </div>
-                        </div> <!-- .accordion-item -->
-
-                        <div class="accordion-item">
-                            <h3 class="mb-0 heading">
-                                <a aria-controls="collapseFour" aria-expanded="false" class="btn-block"
-                                   data-toggle="collapse"
-                                   href="#collapseFour" role="button">Who should I contact in case of
-                                    support.<span class="icon"></span></a>
-                            </h3>
-                            <div aria-labelledby="headingOne" class="collapse" data-parent="#accordion"
-                                 id="collapseFour">
-                                <div class="body-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ad laborum
-                                        expedita. Nostrum iure atque enim quisquam minima distinctio omnis, consequatur
-                                        aliquam suscipit, quidem, esse aspernatur! Libero, excepturi animi repellendus
-                                        porro impedit nihil in doloremque a quaerat enim voluptatum, perspiciatis, quas
-                                        dignissimos maxime ut cum reiciendis eius dolorum voluptatem aliquam!</p>
-                                </div>
-                            </div>
-                        </div> <!-- .accordion-item -->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <th:block th:include="fragment/layout :: footer"></th:block>
+    <th:block th:include="fragment/layout :: footer"> </th:block>
 </div>
-<th:block th:include="fragment/layout :: javascript"></th:block>
+<th:block th:include="fragment/layout :: javascript"> </th:block>
 <script th:src="@{/js/task-step.js}"></script>
 <script th:src="@{/js/task-step1.js}"></script>
 </body>
