--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=vietnamese');
-
 body {
   line-height: 1.7;
   color: rgba(0, 0, 0, 0.5);
@@ -1489,7 +1487,7 @@ a:hover {
 }
 
 .box-step .step.active .circle {
-  background: #28A745;
+  background: #51af33;
   color: #fff;
 }
 
@@ -1687,6 +1685,11 @@ a:hover {
    background-color: #438e29;
  }
 
+.btn-primary {
+  border: 1px solid #51af33;
+  background-color: #51af33;
+}
+
 .option-date button{
   padding: 0.5em 1.38em 0.5em;
   color: #545e69;
@@ -1707,8 +1710,8 @@ a:hover {
 }
 
 .option-date button.active{
-  border: 1px solid #48a32e;
-  background-color: #48a32e;
+  border: 1px solid #51af33;
+  background-color: #51af33;
   color: #fff !important;
 }
 
@@ -1771,6 +1774,7 @@ a:hover {
   -ms-flex-direction: row;
   flex-direction: row;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .recommendations__result-figure{
@@ -2112,6 +2116,116 @@ i.recommendations__badge-info {
     display: none
   }
 }
+
+.recommendations__badge-list li{
+  display: inline;
+  position: relative;
+}
+
+.recommendations__pill--elite i, .recommendations__pill--reliability-badge i, .recommendations__pill--new-tasker i{
+  padding-right: 1rem;
+  color: #31a7a8;
+}
+
+.recommendations__pill--elite, .recommendations__pill--reliability-badge, .recommendations__pill--new-tasker{
+  padding-right: 1rem;
+  color: #31a7a8;
+  font-weight: 600;
+}
+
+.tooltip-hover {
+  cursor: pointer;
+}
+.tooltip-tether {
+  position: relative;
+  display: inline;
+}
+
+.recommendations__result-info i{
+  margin-right: 0.25rem;
+  padding-right: 12px;
+}
+
+i.recommendations__badge-info {
+  color: #b1b9c3;
+  margin-left: 0.25rem;
+  padding: 0 !important;
+}
+.tooltip{
+  visibility: hidden;
+  position: absolute;
+  width: 18rem;
+  right: 0;
+  right: -webkit-calc(50% - 9rem);
+  right: calc(50% - 9rem);
+  opacity: 1;
+}
+
+.tooltip.active{
+  visibility: visible;
+}
+
+.tooltip-triangle {
+  height: 0;
+  margin: auto;
+  position: relative;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid #dce0e6;
+  width: 0rem;
+  z-index: 2;
+}
+
+.tooltip-triangle:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 9px solid white;
+  top: 2px;
+  left: -webkit-calc(50% - 4px);
+  left: calc(50% - 4px);
+  z-index: 1;
+}
+
+.tooltip .tooltip-inner {
+  position: relative;
+  line-height: 20px;
+  padding: 0.8rem;
+  text-align: left;
+  color: #242a30;
+  background: white;
+  border: 1px solid #dce0e6;
+  box-shadow: rgba(0,0,0,0.1) 1px 1px 2px 0px;
+  font-size: 14px;
+  font-weight: normal;
+  border-radius: 5px;
+  z-index: 1;
+  width: 100%;
+  max-width: 100%;
+}
+
+.modal-choose-date{
+  position: absolute;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-height: 400px;
+  border-radius: 5px;
+  border: 1px solid #868686;
+}
+.modal-choose-date span.close{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+}
+
 
 /*RESET CSS Bootstrap*/
 /*.btn-primary {*/
