--- a/src/main/resources/templates/create-task-step-2.html
+++ b/src/main/resources/templates/create-task-step-2.html
@@ -204,6 +204,84 @@
                                    tabindex="0" role="button">
                                     <span>Thông tin &amp; Nhận xét</span>
                                 </a>
+                                <a class="recommendations__hire-btn btn btn-primary btn-block " >
+                                    <span>Chọn &amp; Tiếp tục</span>
+                                </a>
+                                <div class="u-hidden--sm">
+                                    <span class="whisper">
+                                        <span>
+                                        Bạn có thể trò chuyện với Nhân viên, điều chỉnh chi tiết công việc hoặc thay đổi thời gian thực hiện công việc sau khi đặt chỗ
+                                        </span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="recommendations__result-content">
+                            <div class="recommendations__result-name" tabindex="0" role="button">Trần Hiểu Đông</div>
+                            <span>
+                                <div class="recommendations__result-price-container priceChange-appear-active">
+                                    <div class="recommendations__result-price recommendations__pill">
+                                        <strong>80.000 vnđ<span>/h</span></strong>
+                                    </div>
+                                </div>
+                            </span>
+                            <ul class="recommendations__badge-list">
+                                <li class="recommendations__pill--elite">
+                                    <i class="icon-sentiment_very_satisfied"></i><span>Nhân viên ưu tú</span>
+                                </li>
+                            </ul>
+                            <ul class="recommendations__result-info">
+                                <li><i class="icon-check-circle-o"></i><span>66 Công việc nhà</span></li>
+                                <li><i class="icon-star-o"></i>
+                                    <span>
+                                        100% Nhận xét tích cực
+                                        <span class="tooltip-tether">
+                                            <i class="icon-info_outline recommendations__badge-info"></i>
+                                            <span class="tooltip">
+                                                <div class="tooltip-triangle"></div>
+                                                <div class="tooltip-inner">
+                                                    <span>Đánh giá tích cực dựa trên tất cả các công việc đã hoàn thành. Giúp bạn sáng suốt hơn khi chọn một nhân viên.</span>
+                                                </div>
+                                            </span>
+                                        </span>
+                                    </span>
+
+                                </li>
+                                <li><i class="icon-beenhere"></i><span>100% Tin cậy</span> <i
+                                    class="icon-info_outline"></i></li>
+                            </ul>
+                            <div class="recommendations__blurb-title"><span>Tôi có thể giúp bạn:</span></div>
+                            <div class="recommendations__blurb">
+                                Đếm rất khéo léo và hiệu quả với các công cụ phù hợp để hoàn thành công việc, mọi cài
+                                đặt AC của các đơn vị AC có cùng giá mỗi giờ cho mỗi đơn vị (ví dụ: một đơn vị AC một
+                                giờ hai đơn vị AC hai giờ, v.v. Tối thiểu là 2 giờ cho sửa chữa nhà khác
+                            </div>
+                            <div class="recommendations__review media--object">
+                                <div class="media--figure">
+                                    <img class="avatar-new-72" th:src="@{/images/person_1.jpg}"
+                                         alt="Reviewer">
+                                </div>
+                                <div class="media--content">
+                                    <div class="recommendations__review-content">"Công việc tuyệt vời. Đúng giờ, thân
+                                        thiện, nhanh chóng và lành nghề."
+                                    </div>
+                                    <div class="u-muted">Xuân Thứ - 7/11/2019</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="recommendations__result panel panel--spaced ">
+                        <div class="recommendations__result-figure">
+                            <div>
+                                <img class="recommendations__avatar__circular"
+                                     th:src="@{/images/person_3.jpg}"
+                                     alt="Tasker">
+                            </div>
+                            <div class="recommendations__result-actions">
+                                <a class="recommendations__review-link d-block"
+                                   tabindex="0" role="button">
+                                    <span>Thông tin &amp; Nhận xét</span>
+                                </a>
                                 <a class="recommendations__hire-btn btn btn-primary btn-block "
                                    role="button">
                                     <span>Chọn &amp; Tiếp tục</span>
@@ -226,11 +304,30 @@
                                     </div>
                                 </div>
                             </span>
-                            <ul class="recommendations__badge-list"></ul>
+                            <ul class="recommendations__badge-list">
+                                <li class="recommendations__pill--elite">
+                                    <i class="icon-sentiment_very_satisfied"></i><span>Nhân viên ưu tú</span>
+                                </li>
+                            </ul>
                             <ul class="recommendations__result-info">
                                 <li><i class="icon-check-circle-o"></i><span>66 Công việc nhà</span></li>
-                                <li><i class="icon-star-o"></i><span>100% Nhận xét tích cực </span></li>
-                                <li><i class="icon-shield"></i><span>100% Tin cậy</span></li>
+                                <li><i class="icon-star-o"></i>
+                                    <span>
+                                        100% Nhận xét tích cực
+                                        <span class="tooltip-tether">
+                                            <i class="icon-info_outline recommendations__badge-info"></i>
+                                            <span class="tooltip">
+                                                <div class="tooltip-triangle"></div>
+                                                <div class="tooltip-inner">
+                                                    <span>Đánh giá tích cực dựa trên tất cả các công việc đã hoàn thành. Giúp bạn sáng suốt hơn khi chọn một nhân viên.</span>
+                                                </div>
+                                            </span>
+                                        </span>
+                                    </span>
+
+                                </li>
+                                <li><i class="icon-beenhere"></i><span>100% Tin cậy</span> <i
+                                    class="icon-info_outline"></i></li>
                             </ul>
                             <div class="recommendations__blurb-title"><span>Tôi có thể giúp bạn:</span></div>
                             <div class="recommendations__blurb">
@@ -244,16 +341,11 @@
                                          alt="Reviewer">
                                 </div>
                                 <div class="media--content">
-                                    <div class="recommendations__review-content">"Công việc tuyệt vời. Đúng giờ, thân thiện, nhanh chóng và lành nghề."
+                                    <div class="recommendations__review-content">"Công việc tuyệt vời. Đúng giờ, thân
+                                        thiện, nhanh chóng và lành nghề."
                                     </div>
                                     <div class="u-muted">Xuân Thứ - 7/11/2019</div>
                                 </div>
-                            </div>
-                            <div class="recommendations__result-actions">
-                                <a class="recommendations__hire-btn btn btn-primary btn-block js-btn-hire"
-                                   role="button">
-                                    <span>Chọn &amp; Tiếp tục</span>
-                                </a>
                             </div>
                         </div>
                     </div>
