sửa lại tên file html và cấu trúc thư mục!

--- a/src/main/resources/templates/task/create/step-1.html
+++ b/src/main/resources/templates/task/create/step-1.html
@@ -189,7 +189,8 @@
                                             <input type="checkbox" class="custom-control-input" id="cateId5"
                                                    value="Sửa chữa nội thất">
                                             <label class="custom-control-label d-inline" for="cateId5">Sửa chữa nội
-                                                thất</label>
+                                                thất
+                                            </label>
                                         </div>
                                     </div>
                                     <div class="mt-5 form-group text-center">
@@ -284,7 +285,7 @@
     <th:block th:include="fragment/layout :: footer"> </th:block>
 </div>
 <th:block th:include="fragment/layout :: javascript"> </th:block>
-<script th:src="@{/js/task-step.js}"></script>
-<script th:src="@{/js/task-step1.js}"></script>
+<script th:src="@{/js/task/task-step.js}"></script>
+<script th:src="@{/js/task/task-step1.js}"></script>
 </body>
 </html>
