--- a/src/main/resources/templates/task/create/step-2.html
+++ b/src/main/resources/templates/task/create/step-2.html
@@ -356,7 +356,7 @@
     <th:block th:include="fragment/layout :: footer"></th:block>
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
-<script th:src="@{/js/task-step.js}"></script>
-<script th:src="@{/js/task-step2.js}"></script>
+<script th:src="@{/js/task/task-step.js}"></script>
+<script th:src="@{/js/task/task-step2.js}"></script>
 </body>
 </html>
