fix cannot browse login form

--- a/src/main/resources/templates/account/login/login.html
+++ b/src/main/resources/templates/account/login/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Contact</title>
-    <th:block th:include="/layout :: head"> </th:block>
+    <title>Login</title>
+    <th:block th:include="fragment/layout :: head"> </th:block>
 </head>
 <body>
 
