--- a/src/main/resources/templates/account/register/register.html
+++ b/src/main/resources/templates/account/register/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Contact</title>
+    <title>Register</title>
     <th:block th:include="fragment/layout :: head"> </th:block>
 </head>
 <body>
