--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -85,7 +85,7 @@
                                             </ul>
                                         </li>
                                         <li><a th:href="@{/contact}" th:text="#{home.contact}">Contact</a></li>
-                                        <li><a href="#" th:text="#{home.sign-in}">Sign in</a></li>
+                                        <li><a th:href="@{/account/login}" th:text="#{home.sign-in}">Sign in</a></li>
                                         <li>
                                             <a th:href="@{/task/create/step1}">
                                                 <span class="bg-primary text-white py-3 px-4 rounded">
